<resources>
    <string name="app_name">短信广播版</string>

    <string name="ip">183.196.13.28</string>
    <string name="Port">12307</string>
    <string name="hint_ip">IP地址：</string>
    <string name="hint_port">端口号：</string>
    <string name="str_Cancel">取消连接</string>
    <string name="str_SendCount">发送短信统计：</string>
    <string name="str_Connect">连接</string>
    <string name="str_SendSms">开始监听</string>
    <string name="str_State">连接状态：</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
